--- a/peribolos.yaml
+++ b/peribolos.yaml
@@ -47,6 +47,7 @@ orgs:
       - maroroman
       - martinpovolny
       - mayaCostantini
+      - michaelclifford
       - mimotej
       - oglok
       - oindrillac
